--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Roger Osalde",
   "description": "Project to test ORM's practice",
   "scripts": {
-    "start": "node src/start.ts",
+    "start": "ts-node src/start.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "ISC",
