--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,13 +5,13 @@
       "noEmit": false,
       "resolveJsonModule": true,
       "noUnusedLocals": true,
-      "outDir": "src",
-      "target": "es2015",
+      "outDir": "./dist",
+      "target": "ES6",
       "module": "commonjs",
       "moduleResolution": "node",
       "preserveConstEnums": true,
       "removeComments": false,
-      "sourceMap": true,
+      "sourceMap": false,
       "experimentalDecorators": true,
       "emitDecoratorMetadata": true,
       "esModuleInterop": true,
